--- a/VMemReaderGUI/VMemReaderGUI/MainWindow.axaml
+++ b/VMemReaderGUI/VMemReaderGUI/MainWindow.axaml
@@ -6,7 +6,15 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="VMemReaderGUI.MainWindow"
         Title="VMemReaderGUI">
-	<StackPanel>
-		<controls:ToolBar/>
-	</StackPanel>
+	<Grid  RowDefinitions="*,10*">
+		<controls:ToolBar Grid.Row ="0"/>
+		<Grid Grid.Row ="1" ColumnDefinitions="*,2*" RowDefinitions="*"  Margin="10">
+			<Border BorderBrush="Black" BorderThickness="2" Grid.Row ="0" Grid.Column="1">
+				<controls:OutputControl HorizontalContentAlignment="Center"/>
+			</Border>
+			<Border BorderBrush="Black" BorderThickness="2" Grid.Row ="0" Grid.Column="0">
+				<controls:IdListControl HorizontalContentAlignment="Center"/>
+			</Border>
+		</Grid>
+	</Grid>
 </Window>
