--- a/VMemModifierGUI/VMemModifierGUI/MainWindow.axaml
+++ b/VMemModifierGUI/VMemModifierGUI/MainWindow.axaml
@@ -10,7 +10,7 @@
 		<controls:ToolBar Grid.Row ="0"/>
 		<Grid Grid.Row ="1" ColumnDefinitions="*,3*" RowDefinitions="*"  Margin="10">
 			<controls:OutputControl x:Name ="OutputControl" Grid.Row ="0" Grid.Column="1" HorizontalContentAlignment="Center"/>
-			<Border BorderBrush="Black" BorderThickness="2" Grid.Row ="0" Grid.Column="0">
+			<Border BorderBrush="Black" BorderThickness="1" CornerRadius="3" Grid.Row ="0" Grid.Column="0">
 				<controls:IdListControl x:Name ="IdControl" HorizontalContentAlignment="Center"/>
 			</Border>
 		</Grid>
