--- a/VMemModifierGUI/VMemModifierGUI/SearchDialog.axaml
+++ b/VMemModifierGUI/VMemModifierGUI/SearchDialog.axaml
@@ -6,7 +6,7 @@
 		Width = "640"
 		Height ="360"
         x:Class="VMemReaderGUI.SearchDialog"
-        Title="SearchDialog">
+        Title="Search">
 		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="50">
 			<StackPanel Orientation="Horizontal" Spacing="10">
 				<TextBlock VerticalAlignment="Center">Pattern</TextBlock>
@@ -20,7 +20,7 @@
 			</StackPanel>
 			<StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
 				<Button Click="OnSearch">OK</Button>
-				<Button>Cancel</Button>
+				<Button Click="OnClose">Cancel</Button>
 			</StackPanel>
 		</StackPanel>
 </Window>
